version/0.11/_sources/contributing.rst.txt
.. _contributing:

Contributing
############

Overall guidance on contributing to a PyAnsys repository appears in
`Contribute <https://dev.docs.pyansys.com/how-to/contributing.html>`_
in the *PyAnsys Developer's Guide*. Ensure that you are thoroughly familiar
with this guide before attempting to contribute to PyAnsys Heart.

.. important::

    This project adheres to the `Contributor Covenant Code of Conduct`_. By
    participating, you agree to uphold this code.

The following contribution information is specific to PyAnsys Heart. Start by selecting your role in the project:

.. grid:: 1 2 3 3
    :padding: 2 2 2 2

    .. grid-item-card:: :fa:`user` User
        :link: contribute/user
        :link-type: doc

        Report bugs, suggesting features, and ask questions.

    .. grid-item-card:: :fa:`book` Documentarian
        :link: contribute/documentarian
        :link-type: doc

        Improve the documentation and write new guides.

    .. grid-item-card:: :fa:`laptop-code` Developer
        :link: contribute/developer
        :link-type: doc

        Fix bugs, add new features, and improve the codebase.

.. toctree::
    :hidden:
    :maxdepth: 3
    :caption: Contribute

    User<contribute/user>
    Documentarian<contribute/documentarian>
    Developer<contribute/developer>