version/0.12/_sources/contributing.rst.txt
.. _contributing:

Contribute
##########

Thank you for your interest in contributing to PyHeart. Contributions for
making the project better can include fixing bugs, adding new features, and
improving the documentation.

.. important::

    This project adheres to the `Contributor Covenant Code of Conduct`_. By
    participating, you agree to uphold this code of conduct.

Overall guidance on contributing to a PyAnsys repository appears in
`Contribute <https://dev.docs.pyansys.com/how-to/contributing.html>`_
in the *PyAnsys developer's guide*. Ensure that you are thoroughly familiar
with this guide before attempting to contribute to PyAnsys Heart.

The following contribution information is specific to PyAnsys Heart. Start by
selecting your role in the project:

.. grid:: 1 2 3 3
    :padding: 2 2 2 2

    .. grid-item-card:: :fa:`user` User
        :link: contribute/user
        :link-type: doc

        Report bugs, suggest features, and ask questions.

    .. grid-item-card:: :fa:`book` Documentarian
        :link: contribute/documentarian
        :link-type: doc

        Improve the documentation and write new content.

    .. grid-item-card:: :fa:`laptop-code` Developer
        :link: contribute/developer
        :link-type: doc

        Fix bugs, add new features, and improve the codebase.

.. toctree::
    :hidden:
    :maxdepth: 3
    :caption: Contribute

    User<contribute/user>
    Documentarian<contribute/documentarian>
    Developer<contribute/developer>